weird safari clipping bug

--- a/public/stylesheets/refinr5.css
+++ b/public/stylesheets/refinr5.css
@@ -92,7 +92,7 @@ h1#logo a {
 .grid_3 h3 a, 
 .grid_4 h3 a {
   font-size: 135%;
-  line-height: 1.15em;
+  line-height: 1.2em;
   font-family: Frutiger, "Frutiger Linotype", Univers, Calibri, "Gill Sans", "Gill Sans MT", "Myriad Pro", Myriad, "DejaVu Sans Condensed", "Liberation Sans", "Nimbus Sans L", Tahoma, Geneva, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-family: helvetica;
 }
